tests/NormalTests/paczka2/big_fuzzy/83706154.err
Error in line 6: LTfs5WJOz3Y S31 X0,0
Error in line 7: 1tZ0yLQk7rj A620 64,9
Error in line 19: Y3koU80MH S6r2 46,r
Error in line 18: Y3koU80MH A620 350,2
Error in line 9: LTfs5WJOz3Y S31 312,8
Error in line 20: S652 S168 49,6
Error in line 23: Y3koU80MH S31 11,1
Error in line 28: Y3koU80MH S652 78,4
Error in line 29: Y3koU80MH A620 87,7
Error in line 24: LTfs5WJOz3Y A620 17,3
Error in line 47: 1tZ0yLQk7rj S652 -3,0
Error in line 42: Y3koU80MH S652 219,6
Error in line 62: LTfs5WJOz3Y S168 85,4
Error in line 64: pCjKLrn A620 7,5
Error in line 71: Y3koU80MH A620 46,0
Error in line 78: S652 S168 47,3
Error in line 80: pCjKLrn S652 93,6
Error in line 86: pCjKLrn S168 72,2
Error in line 87: LTfs5WJOz3Y S168 5,9
Error in line 91: LTfs5WJOz3Y S652 25,1
Error in line 92: LTfs5WJOz3Y A620 8,2
Error in line 61: arlUcL A620 134,2
Error in line 99: pCjKLrn S652 41,4
Error in line 104: LTfs5WJOz3Y A620 97,3
Error in line 108: LTfs5WJOz3Y S31 69,7
Error in line 112: LTfs5WJOz3Y S652 93,9
Error in line 118: pCjKLrn S168 81,3
Error in line 124: pCjKLrn S31 8,6
Error in line 129: 8hl S652 18,5
Error in line 135: LTfs5WJOz3Y S652 59,0
Error in line 140: LTfs5WJOz3Y S31 64,7
Error in line 141: LTfs5WJOz3Y S652 69,1
Error in line 147: 8hl S168 23,7
Error in line 154: pCjKLrn S168 -3,8
Error in line 82: 1tZ0yLQk7rj S652 269,1
Error in line 160: arlUcL S31 27,0
Error in line 156: 1tZ0yLQk7rj S168 90,7
Error in line 182: LTfs5WJOz3Y S652 69,4
Error in line 190: 8hl S31 65,5
Error in line 203: LTfs5WJOz3Y A620 19,2
Error in line 201: arlUcL S168 98,4
Error in line 212: 8hl A620 73,7
Error in line 130: pCjKLrn S168 44,7
Error in line 234: Y3koU8wMH A62w 131,1
Error in line 232: Y3koU80MH A620 27,9
Error in line 225: 1tZ0yLQk7rj A620 32,3
Error in line 246: 1tZ0yLQk7rj S168 49,4
